# Mini-Editor

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
include/: common.hpp
knowledge-base/: 00_Index.md  lang_oop_virtual_override.md  lang_smart_pointers.md  lang_string_view.md
src/: main.cpp
tests/: test_main.cpp
